--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -57,7 +57,10 @@
                 }
             },
             "args": [],
-            "cwd": "${workspaceFolder}"
+            "cwd": "${workspaceFolder}",
+            "env": {
+                "RUST_BACKTRACE":"full"
+            }
         },
         {
             "type": "lldb",
