--- a/example/apiTest/userDetails.jsonc
+++ b/example/apiTest/userDetails.jsonc
@@ -7,6 +7,11 @@
             "Authorization": "Bearer {{token}}",
             "Accept": "application/json",
             "Content-Type": "application/json"
+        },
+        "body":{
+            "test":[
+                "{{> test_nested:string}}"
+            ]
         }
     },
     "response":{
