Migrated to serde json

--- a/apiunit.jsonc
+++ b/apiunit.jsonc
@@ -1,5 +1,6 @@
 {
     "baseUrl":"http://127.0.0.1:8000/api/",
+    // Test comment
     "preVariables": {
         "username": "dev",
         "password": "dev"
