--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde-hjson = "0.9.1"
+serde_json = "1.0.48"
 http = "0.2.0"
 glob = "0.3.0"
 Boa = "0.6.0"
 url = "2.1.1"
 hyper = "0.13.2"
+json_comments = "0.2.0"
 
 [workspace]
 
