--- a/apiunit.jsonc
+++ b/apiunit.jsonc
@@ -1,9 +1,8 @@
 {
-    "baseUrl":"http://127.0.0.1:8000/api/",
+    "baseUrl":"http://127.0.0.1:8000/",
     // Test comment
     "preVariables": {
-        "username": "dev",
-        "password": "dev"
+        "username": "dev"
     },
     "default": {
         "method":"POST",
