--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,10 @@ Boa = "0.6.0"
 url = "2.1.1"
 hyper = "0.13.2"
 json_comments = "0.2.0"
+tokio = { version = "0.2.13", features = ["macros", "io-util"] }
+regex = "1.3.4"
+futures = "0.3.4"
+colored = "1.9.3"
 
 [workspace]
 
