--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "json-api-tester"
+name = "jsonapiunit"
 version = "0.1.0"
 authors = ["WhizSid <whizsid@aol.com>"]
 edition = "2018"
