--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "jsonapiunit"
-version = "0.1.0"
+version = "0.1.3"
 authors = ["WhizSid <whizsid@aol.com>"]
 edition = "2018"
 
@@ -20,6 +20,7 @@ typed-headers = "0.2.0"
 regex = "1.3.4"
 futures = "0.3.4"
 colored = "1.9.3"
+clap = "2.33.0"
 
 [workspace]
 
